# CrossPlatformSDL2

./: .gitignore  CMakeLists.txt  README.md  build.sh  builder.py  simple_shell.html
src/: CMakeLists.txt  Makefile  main.c  main.cpp
src/helper/: CMakeLists.txt  helper.c  helper.h
src/renderloop/: CMakeLists.txt  renderloop.cpp  renderloop.hpp
